fixing modal height on mobile version

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -13,7 +13,7 @@
     transform: translate(-50%, -50%);
     z-index: 3;
 
-    max-height: 90vh;
+    max-height: 85vh;
     overflow-y: auto;
 
     scrollbar-width: thin; 
@@ -292,6 +292,7 @@
         top: 50%;
         max-width: 30rem;
         padding: 2.5rem;
+        max-height: 90vh;
         & .schedule-wrapper {
             display: flex;
             flex-direction: row;
